Error pages must run, lest test

--- a/public/404.html
+++ b/public/404.html
@@ -226,7 +226,7 @@ span.green {
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="">
   <a href="https://codepen.io/ZonFire99/full/njdls/" class="viewFull" target="_parent">View in full it looks way better
   :)</a>
 
