--- a/public/500.html
+++ b/public/500.html
@@ -147,7 +147,7 @@ border-radius:50%;box-shadow:0 0 14px 4px white;margin-top:-2px}
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="">
   <link href='https://fonts.googleapis.com/css?family=Carter+One' rel='stylesheet' type='text/css'>
   
   <div class="fon">
